; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/kadm5/extr_rename_c.c_kadm5_c_rename_principal.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/kadm5/extr_rename_c.c_kadm5_c_rename_principal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOMEM = common dso_local global i64 0, align 8
@kadm_rename = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @kadm5_c_rename_principal(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  %11 = alloca [1024 x i8], align 16
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = bitcast i8* %14 to i32*
  store i32* %15, i32** %8, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call i64 @_kadm5_connect(i8* %16)
  store i64 %17, i64* %9, align 8
  %18 = load i64, i64* %9, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %3
  %21 = load i64, i64* %9, align 8
  store i64 %21, i64* %4, align 8
  br label %70

22:                                               ; preds = %3
  %23 = getelementptr inbounds [1024 x i8], [1024 x i8]* %11, i64 0, i64 0
  %24 = call i32* @krb5_storage_from_mem(i8* %23, i32 1024)
  store i32* %24, i32** %10, align 8
  %25 = load i32*, i32** %10, align 8
  %26 = icmp eq i32* %25, null
  br i1 %26, label %27, label %29

27:                                               ; preds = %22
  %28 = load i64, i64* @ENOMEM, align 8
  store i64 %28, i64* %4, align 8
  br label %70

29:                                               ; preds = %22
  %30 = load i32*, i32** %10, align 8
  %31 = load i32, i32* @kadm_rename, align 4
  %32 = call i32 @krb5_store_int32(i32* %30, i32 %31)
  %33 = load i32*, i32** %10, align 8
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @krb5_store_principal(i32* %33, i32 %34)
  %36 = load i32*, i32** %10, align 8
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @krb5_store_principal(i32* %36, i32 %37)
  %39 = load i32*, i32** %8, align 8
  %40 = load i32*, i32** %10, align 8
  %41 = call i64 @_kadm5_client_send(i32* %39, i32* %40)
  store i64 %41, i64* %9, align 8
  %42 = load i32*, i32** %10, align 8
  %43 = call i32 @krb5_storage_free(i32* %42)
  %44 = load i64, i64* %9, align 8
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %48

46:                                               ; preds = %29
  %47 = load i64, i64* %9, align 8
  store i64 %47, i64* %4, align 8
  br label %70

48:                                               ; preds = %29
  %49 = load i32*, i32** %8, align 8
  %50 = call i64 @_kadm5_client_recv(i32* %49, i32* %13)
  store i64 %50, i64* %9, align 8
  %51 = load i64, i64* %9, align 8
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %48
  %54 = load i64, i64* %9, align 8
  store i64 %54, i64* %4, align 8
  br label %70

55:                                               ; preds = %48
  %56 = call i32* @krb5_storage_from_data(i32* %13)
  store i32* %56, i32** %10, align 8
  %57 = load i32*, i32** %10, align 8
  %58 = icmp eq i32* %57, null
  br i1 %58, label %59, label %62

59:                                               ; preds = %55
  %60 = call i32 @krb5_data_free(i32* %13)
  %61 = load i64, i64* @ENOMEM, align 8
  store i64 %61, i64* %4, align 8
  br label %70

62:                                               ; preds = %55
  %63 = load i32*, i32** %10, align 8
  %64 = call i32 @krb5_ret_int32(i32* %63, i64* %12)
  %65 = load i64, i64* %12, align 8
  store i64 %65, i64* %9, align 8
  %66 = load i32*, i32** %10, align 8
  %67 = call i32 @krb5_storage_free(i32* %66)
  %68 = call i32 @krb5_data_free(i32* %13)
  %69 = load i64, i64* %9, align 8
  store i64 %69, i64* %4, align 8
  br label %70

70:                                               ; preds = %62, %59, %53, %46, %27, %20
  %71 = load i64, i64* %4, align 8
  ret i64 %71
}

declare dso_local i64 @_kadm5_connect(i8*) #1

declare dso_local i32* @krb5_storage_from_mem(i8*, i32) #1

declare dso_local i32 @krb5_store_int32(i32*, i32) #1

declare dso_local i32 @krb5_store_principal(i32*, i32) #1

declare dso_local i64 @_kadm5_client_send(i32*, i32*) #1

declare dso_local i32 @krb5_storage_free(i32*) #1

declare dso_local i64 @_kadm5_client_recv(i32*, i32*) #1

declare dso_local i32* @krb5_storage_from_data(i32*) #1

declare dso_local i32 @krb5_data_free(i32*) #1

declare dso_local i32 @krb5_ret_int32(i32*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
